# LeanTool

./: .gitignore  CLAUDE.md  README.md  lake-manifest.json  lakefile.lean  lean-api-server-flask.py  leanmcp.py  leantool.py  pyproject.toml  workflows.py
LeanTool/: Basic.lean
examples/: pabc_claude.lean  pabc_claude.lean.txt
