[project]
name = "leantool"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.71.0",
    "streamlit>=1.40.1",
    "jsonlines>=4.0.0",
    "flask>=3.1.0",
    "pantograph @ git+https://github.com/stanford-centaur/PyPantograph",
    "mcp[cli]>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
